<resources>
    <string name="app_name">Pick My Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Sign In</string>
    <string name="login_usr">Username</string>
    <string name="login_pwd">Password</string>
    <string name="login_btn">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="SignUp_here">Dont have an account? Sign up here</string>
    <string name="SignIn_here">Have an account? Sign in here</string>
    <string name="trending">Trending Of The Week</string>
    <string name="see_all">See All</string>
    <string name="foodNameTranding">Food Name Tranding</string>
    <string name="search">Cari Resto, Makanan, Minuman......</string>
    <string name="ket_saldo">Saldo Dompet Q</string>

    <string name="saldo">IDN 7.000.000</string>
    <string name="id_key">USERID</string>
    <string name="user_firstName">USER_FIRST_NAME</string>
    <string name="user_lastName">USER_LAST_NAME</string>
    <string name="user_address">USER_ADDRESS</string>
    <string name="user_phone">USER_PHONE</string>
    <string name="user_poin">USER_POIN</string>
    <string name="user_amount">USER_AMOUNT</string>
    <string name="user_email">USER_EMAIL</string>
    <string name="user_image">USER_IMAGE</string>
    <string name="username_key">USERNAME</string>
    <string name="total">0</string>
    <string name="note">Note</string>
    <string name="list_cart">List Cart</string>
    <string name="order_list">Order List</string>
    <string name="date">Date :</string>
    <string name="date_created">Order Date</string>
    <string name="total_order">Total :</string>
    <string name="order_id">Order ID :</string>
    <string name="order_value">Order ID</string>
    <string name="store_id">Store ID :</string>
    <string name="store_value">Store ID</string>
    <string name="button_pay">Pay</string>
    <string name="button_rating">Add Rating</string>
    <string name="rating_description">Rating Description</string>
    <string name="user_id">User ID :</string>
    <string name="storeId_rating">Store ID</string>
    <string name="userId_rating">User ID</string>

    <string name="order_key">ORDERID</string>
    <string name="order_created">ORDER_CREATED</string>
    <string name="store_key">STOREID</string>
    <string name="sold_items">SOLD_ITEMS</string>


    <string name="default_value">DEFAULT</string>

    <string name="login_method_key">LOGIN_METHOD</string>
    <string name="checkout_method_key">CHECKOUT_METHOD</string>
    <string name="authority_key">com.project.pickmyfood.fileprovider</string>
    <string name="shared_preference_name">com.project.shared.preference</string>

    <color name="colorGolden">#ffbf00</color>
    <color name="colorGray">#AAA3A3</color>
    <color name="colorBlueOcean">#C2DEED</color>


</resources>