<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.home.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="731dp"
        android:background="@drawable/rectangle_4bgheader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_5bgheader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/menuHomeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="Hi,User"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_weight="4"
                android:src="@drawable/ic_baseline_notifications_active_24" />

            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="40dp"
                android:layout_height="40dp"

                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/ic_baseline_image_24" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:text="Point Saya"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:drawableRight="@drawable/ic_baseline_monetization_on_24"
                android:text="0"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tukarPoinButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="#FFD607"
                android:text="Tukar Point"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                app:cornerRadius="10dp" />

        </LinearLayout>

        <com.synnapps.carouselview.CarouselView
            android:id="@+id/carouselView"
            android:layout_width="295dp"
            android:layout_height="225dp"
            android:layout_marginTop="10dp"
            app:fillColor="#FFFFFFFF"
            app:pageColor="#00000000"
            app:radius="6dp"
            android:layout_gravity="center"
            app:slideInterval="3000"
            app:strokeColor="#FF777777"
            app:strokeWidth="1dp" />

        <!--        <ImageView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center"-->
        <!--            app:srcCompat="@drawable/rectangle_8imghome" />-->
    </LinearLayout>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:alpha=".8"
        android:backgroundTint="#DFDBDB"
        android:visibility="visible"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Ayam Geprek Mozarella"
                android:textColor="#070707"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Keju mozarella yang yummy dipadukan dengan sambal yang hot"
                android:textColor="#070707"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_monetization_on_24"
                android:text="800 Poin"
                android:textColor="#040404"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/trending"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_all"
            android:textColor="#FB0909"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageTranding"
                android:layout_width="140dp"
                android:layout_height="140dp"
                app:srcCompat="@drawable/rectangle_8imghome" />

            <TextView
                android:id="@+id/foodNameTranding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foodNameTranding"
                android:textColor="#000000"
                android:textSize="15sp" />

<!--            <RatingBar-->
<!--                android:id="@+id/rb_ratingBar"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="50dp"-->
<!--                android:layout_centerInParent="true"-->
<!--                android:isIndicator="false"-->
<!--                android:numStars="5"-->
<!--                android:progressBackgroundTint="#000000"-->
<!--                android:progressTint="@color/colorCustomYellow"-->
<!--                android:rating="4"-->
<!--                android:stepSize="0.5" />-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_baseline_star_24" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                app:srcCompat="@drawable/rectangle_8imghome" />

            <TextView
                android:id="@+id/foodNameTranding1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foodNameTranding"
                android:textColor="#000000"
                android:textSize="15sp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/rating1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_baseline_star_24" />
                <ImageView
                    android:id="@+id/rating2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_baseline_star_24" />

                <ImageView
                    android:id="@+id/rating3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_baseline_star_24" />
            </LinearLayout>
        </LinearLayout>
        <!--        <RelativeLayout-->
        <!--            android:id="@+id/pbOrderActive"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:background="@android:color/white"-->
        <!--            android:gravity="center"-->
        <!--            android:translationZ="5dp"-->
        <!--            android:visibility="gone"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent">-->

        <!--            <ProgressBar-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_gravity="center" />-->
        <!--        </RelativeLayout>-->
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>